# flagbench

./: .gitignore  CITATION.cff  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: README.md
data/scenarios/: adversarial.csv  boundary_conditions.csv  fallback_trigger.csv  normal_ops.csv
docs/: adapter_guide.md  scenario_provenance.md
examples/graphql_system/: .env.example  README.md  adapter.py  demo.py  server.py
figures/: plot_results.py
flagbench/: __init__.py  generate_scenarios.py  harness.py  metrics.py  oracle.py  properties.py  resolver.py  schema.py
flagbench/adapters/: __init__.py  reference.py  unleash.py  unleash_sim.py
tests/: test_metrics.py  test_properties.py  test_resolver.py
