[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flagbench"
version = "1.0.0"
description = "Property-based correctness benchmark for runtime feature flag resolution systems"
authors = [{ name = "Roman Fedytskyi", email = "fedytskyi@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "feature-flags", "feature-toggles", "property-based-testing",
    "benchmark", "micro-frontends", "compliance", "continuous-delivery"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Testing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "pydantic>=2.0",
    "hypothesis>=6.100",
    "pandas>=2.0",
    "matplotlib>=3.7",
]

[project.urls]
Homepage = "https://github.com/RomanFedytskyi/flagbench"
Repository = "https://github.com/RomanFedytskyi/flagbench"
